src/objects/favoriteOrBlackListMovie__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MovieId__c</fullName>
        <label>MovieId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wherePutIt__c</fullName>
        <label>wherePutIt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Favorite</fullName>
                </value>
                <value>
                    <fullName>Black list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>favoriteOrBlackListMovie</label>
    <nameField>
        <label>favoriteOrBlackListMovie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>favoriteOrBlackListMovies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>